# CoopAndreas

./: CMakeLists.txt  README.md  xmake.lua
.github/workflows/: ci.yml
client/src/: CMainUpdateCoordinators.cpp  CMainUpdateCoordinators.h  CMissionSyncState.cpp  CMissionSyncState.h  CNetwork.cpp  CNetwork.h  CNetworkAnimQueue.cpp  CNetworkFireManager.cpp  CNetworkFireManager.h  CNetworkPed.cpp  CNetworkPed.h  CNetworkPedManager.cpp  CNetworkPedManager.h  CNetworkPickupManager.cpp  CNetworkPickupManager.h  CNetworkPlayer.cpp  CNetworkPlayer.h  CNetworkPlayerManager.cpp  CNetworkPlayerManager.h  CNetworkPlayerStats.cpp  CNetworkPlayerStats.h  CNetworkStaticBlip.cpp  CNetworkVehicle.cpp  CNetworkVehicle.h  CNetworkVehicleManager.cpp  CNetworkVehicleManager.h  COpCodeSync.cpp  COpCodeSync.h  CPacketHandler.cpp  CPacketHandler.h  CPackets.h  CSniperAimMarkerSync.cpp  CSniperAimMarkerSync.h  CStatsSync.cpp  CStatsSync.h  CTaskSequenceSync.cpp  CTaskSync.cpp  CTaskSync.h  CWantedSync.cpp  CWantedSync.h  (+3 more)
cmake/: CMakeLists.txt
docs/: ROADMAP.md
docs/qa/: animation-sync-matrix.md  cheat-sync-matrix.md  gang-war-lifecycle-parity-checklist.md  gang-wars-sync-matrix.md  interpolation-smoothing-regression.md  map-state-parity-checklist.md  mission-parity-opcode-task-tracing.md  p0-sync-checklist.md  parachute-stunt-sync-matrix.md  phase-ammu-nation-checklist.md  phase-asset-missions-checklist.md  phase-courier-routes-checklist.md  phase-schools-checklist.md  (+26 more)
shared/: ObjectiveSyncState.h  PacketRegistry.h
tools/: launcher.py  launcher_config.json  opcode_audit.py  qa_trace.py
(+41 files in other folders)
